# gameOfLife

./: README.md  buttons.json  drawLife.py  main.py  main.spec  settings.ini  settings.py  settings.spec  setup.cfg  setup.py
