[metadata]
name = Game of Life Pygame Nebula Sim
author = John Dole and contributors, John Conway original algorithmn
description = Colorized for un-scientific Nebula Simulation.
long_description = file: README.md
long_description_content_type = text/x-md
keywords = game, of, life, nebula, pygame
url = https://github.com/mindware01/gameOfLife
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Entertainment
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware :: Hardware Drivers
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.7, <4
install_requires = [
    pygame,
    pygame-widgets,
    setuptools
    ]
